--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,13 +20,19 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    
+
     buildFeatures {
         dataBinding true
     }
@@ -42,6 +48,7 @@ android {
 }
 
 dependencies {
+    androidTestImplementation 'androidx.test:rules:1.3.0-rc01'
     def hilt_jetpack = "1.0.0-alpha01"
     def lifecycle_version = "2.3.0-alpha04"
     def room_version = "2.2.5"
@@ -88,6 +95,7 @@ dependencies {
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
+    testImplementation "org.robolectric:robolectric:4.3.1"
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
